objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>Difference between List and Sales amount</description>
        <formula>ListPrice -  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <formula>(ListPrice - UnitPrice) / ListPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Variance__c</fullName>
        <formula>IF(
 OR(ListPrice=0,ISNULL(ListPrice)) ,  
1,
UnitPrice /  ListPrice
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>